add: ran graph init in packages/subgraph

--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   },
   "scripts": {
     "lerna": "lerna",
+    "deploy:contracts": "lerna run deploy:contracts",
     "build": "lerna run build",
     "test": "lerna run --parallel test",
     "coverage": "lerna run coverage",
-    "clean": "lerna run --parallel clean"
+    "clean": "lerna run --parallel clean",
+    "task:deployBulbafloor": "lerna run task:deployBulbafloor",
+    "task:buyNFT": "lerna run task:buyNFT"
   },
   "dependencies": {}
 }
