--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -17,6 +17,6 @@
     "target": "es2020"
   },
   "exclude": ["node_modules"],
-  "files": ["./hardhat.config.ts"],
+  "files": ["./packages/contracts/hardhat.config.ts"],
   "include": ["src/**/*", "tasks/**/*", "test/**/*", "deploy/**/*", "types/"]
 }
