some tooling fixes

--- a/packages/subgraph/tsconfig.json
+++ b/packages/subgraph/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
+  "compilerOptions": {
+    "composite": true
+  },
   "include": ["src", "tests"]
 }
