--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "gnosisguild",
     "url": "https://github.com/gnosisguild"
   },
+  "packageManager": "pnpm@8.14.0",
   "devDependencies": {
     "lerna": "^8.0.0"
   },
