--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
+    "composite": true,
     "target": "es2020"
   },
   "exclude": ["node_modules"],
