--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.49.0",
-    "@graphprotocol/graph-ts": "0.29.1"
+    "@graphprotocol/graph-ts": "0.29.1",
+    "assemblyscript": "^0.27.22"
   },
   "devDependencies": {
     "matchstick-as": "0.5.0"
