--- a/packages/subgraph/tsconfig.json
+++ b/packages/subgraph/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true
   },
-  "files": ["./src/bulbafloor.ts"],
+  "files": [],
+  "exclude": ["generated", "node_modules"],
   "include": ["src", "tests"]
 }
